// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> should ask detail about categories 1`] = `
.c3 {
  width: 5em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c0 {
  margin-top: 2rem;
  margin-bottom: 1.25rem;
  font-size: 1.625rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c5 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <h2
    class="c0"
  >
    Quel est votre catégorie dans la convention collective ?
  </h2>
  <p>
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c1"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <h2
    class="c0"
  >
    Précisez les périodes éventuelles passées au statut de TAM ou employé
  </h2>
  <label
    class="c2"
  >
    <p>
      Période passée en tant que TAM ou employé
    </p>
    <div>
      <input
        class="c3"
        min="0"
        name="tamDuration"
        size="5"
        type="number"
        value=""
      />
       
      mois
    </div>
  </label>
  <label
    class="c2"
  >
    <p>
      Période passée en tant que cadre
    </p>
    <div>
      <input
        class="c3"
        min="0"
        name="cadreDuration"
        size="5"
        type="number"
        value=""
      />
       
      mois
    </div>
  </label>
  <label
    class="c4"
    for="2"
  >
    Quel etait votre âge à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c5"
    >
      *
    </span>
  </label>
  <div
    class="c6"
  >
    <input
      class="c3"
      id="2"
      name="age"
      size="5"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Step /> should ask detail about retirement  1`] = `
.c5 {
  width: 5em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  margin-top: 2rem;
  margin-bottom: 1.25rem;
  font-size: 1.625rem;
}

.c2 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c6 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c3 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <h2
    class="c0"
  >
    Quel est votre catégorie dans la convention collective ?
  </h2>
  <p>
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c1"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <label
    class="c2"
    for="3"
  >
    Quel etait votre âge à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c3"
    >
      *
    </span>
  </label>
  <div
    class="c4"
  >
    <input
      class="c5"
      id="3"
      name="age"
      size="5"
      type="number"
      value="62"
    />
  </div>
  <p
    class="c6"
  >
    Le salarié pourrait-il bénéficier de la retraite ?
    <span
      aria-label="champs obligatoire"
      class="c3"
    >
      *
    </span>
  </p>
  <div
    class="c7"
  >
    <label
      class="c1"
    >
      <input
        name="hasRetirementAge"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c1"
    >
      <input
        name="hasRetirementAge"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Step /> should render 1`] = `
.c5 {
  width: 5em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c0 {
  margin-top: 2rem;
  margin-bottom: 1.25rem;
  font-size: 1.625rem;
}

.c2 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c3 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <h2
    class="c0"
  >
    Quel est votre catégorie dans la convention collective ?
  </h2>
  <p>
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c1"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <label
    class="c2"
    for="1"
  >
    Quel etait votre âge à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c3"
    >
      *
    </span>
  </label>
  <div
    class="c4"
  >
    <input
      class="c5"
      id="1"
      name="age"
      size="5"
      type="number"
      value=""
    />
  </div>
</div>
`;
